# livedepystats

./: Dockerfile  Procfile  README.md  config.py  pyproject.toml  supervisor.conf
.github/workflows/: ci.yml
app/: __init__.py  api.py  models.py  serializers.py
migrations/versions/: 45c60a65f6aa_.py
tests/: conftest.py  test_api.py  test_app.py  test_models.py  test_serializer.py
