[tool.poetry]
name = "livedepystats"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.1"
gunicorn = "^20.0.4"
supervisor = "^4.2.1"
Flask-Migrate = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
ipdb = "^0.13.4"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
